# GuerrillaBrew

./: .gitignore  GuerrillaBrew.pro  README.md  brewwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
hardware/pcb/fermentcontrol/: fermentcontrol.fzz
hardware/pcb/fermentcontrol/Schaltplan/: eagle.epf  fermentcontrol.brd  fermentcontrol.pro  fermentcontrol.sch
hardware/pcb/schematic/: brewcontrol.tch
pcb/: fermentcontrol.fzz  sketch.fzz
pcb/fermentcontrol/Schaltplan/: eagle.epf  fermentcontrol.brd  parts
pcb/schematic/: fermentcontrol.tch
qtgui/: GuerrillaBrew.pro  brewwindow.h  mainwindow.cpp  mainwindow.h
src/FermentationControl/: .gitignore
src/FermentationControl/fermentationcontrol/: __init__.py  config.ini  fermentationcontrol.py  run.py
src/FermentationControl/fermentationcontrol/fcio/: ConsoleLogger.py  FileLogger.py
src/FermentationControl/fermentationcontrol/sensors/: TemperatureSensor.py  __init__.py
src/FermentationControl/fermentationcontrol/test/: stackoverflowtimer.py
src/FermentationControl/fermentationcontrol/ui/: MainWindow.py  mainwindow.ui
src/FermentationControl/fermentationcontrol/util/: Config.py  (+2 more)
src/brewcontrol/: CMakeLists.txt  PID.hpp  main.cpp
src/fermentationcontrol/: .gitignore  config.ini  timers.py
src/fermentationcontrol/test/: stackoverflowtimer.py
src/fermentationcontrol/ui/: __init__.py
src/fermentationcontrol/util/: Borg.py  Config.py
src/fermentationmonitoring/: setup.py
src/qtgui/: brewwindow.cpp
src/sandbox/brewcontrol/: PID.cpp
src/sandbox/qtgui/: mainwindow.ui  resources.qrc
(+1 files in other folders)
